--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-26  Maximilian Schleiss <maximilian@xfce.org>
+
+	* gl.po: Galician translation update (Leandro Regueiro)
+
 2008-06-24  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po, LINGUAS: Add Finnish translation (heavily modified)
