--- a/po/gl.po
+++ b/po/gl.po
@@ -1,20 +1,25 @@
-# Galician translation of the thunar-media-tags-plugin.
+# Galician translation of thunar-media-tags-plugin
 # Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# Copyright (C) 2008 Leandro Regueiro
 # This file is distributed under the same license as the thunar-media-tags-plugin package.
-# Leandro Regueiro <leandro.regueiro@gmail.com>, 2006.
 #
-#, fuzzy
+# Leandro Regueiro <leandro.regueiro@gmail.com>, 2006, 2008.
+#
+# Proxecto Trasno - Adaptación do software libre á lingua galega:  Se desexas
+# colaborar connosco, podes atopar máis información en <http://trasno.net>
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 21:29+0200\n"
-"PO-Revision-Date: 2006-08-17 20:07+0000\n"
-"Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
-"Language-Team: Galician <xfce-i18n@xfce.org>\n"
+"PO-Revision-Date: 2008-06-23 20:30+0100\n"
+"Last-Translator: Leandro Regueiro <leandro DOT regueiro AT gmail DOT com>\n"
+"Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
 msgid "Title"
@@ -22,11 +27,11 @@ msgstr "Título"
 
 #: ../thunar-plugin/tag-renamer.c:60
 msgid "Artist - Title"
-msgstr ""
+msgstr "Artista - Título"
 
 #: ../thunar-plugin/tag-renamer.c:61
 msgid "Track - Title"
-msgstr ""
+msgstr "Pista - Título"
 
 #: ../thunar-plugin/tag-renamer.c:62
 msgid "Track - Artist - Title"
@@ -54,9 +59,7 @@ msgid "_Underscores"
 msgstr ""
 
 #: ../thunar-plugin/tag-renamer.c:248
-msgid ""
-"Activating this option will replace all spaces in the target filename with "
-"underscores."
+msgid "Activating this option will replace all spaces in the target filename with underscores."
 msgstr ""
 
 #: ../thunar-plugin/tag-renamer.c:253
@@ -64,17 +67,17 @@ msgid "_Lowercase"
 msgstr ""
 
 #: ../thunar-plugin/tag-renamer.c:255
-msgid ""
-"If you activate this, the resulting filename will only contain lowercase "
-"letters."
+msgid "If you activate this, the resulting filename will only contain lowercase letters."
 msgstr ""
 
-#: ../thunar-plugin/tag-renamer.c:264 ../thunar-plugin/tag-renamer.c:702
+#: ../thunar-plugin/tag-renamer.c:264
+#: ../thunar-plugin/tag-renamer.c:702
 #: ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
 msgstr "Artista Descoñecido"
 
-#: ../thunar-plugin/tag-renamer.c:265 ../thunar-plugin/tag-renamer.c:750
+#: ../thunar-plugin/tag-renamer.c:265
+#: ../thunar-plugin/tag-renamer.c:750
 #: ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
 msgstr "Título Descoñecido"
@@ -209,7 +212,7 @@ msgstr ""
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
-msgstr ""
+msgstr "<b>Tipo MIME:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1064
 msgid "<b>Bitrate:</b>"
@@ -225,4 +228,5 @@ msgstr ""
 
 #: ../thunar-plugin/audio-tags-page.c:1103
 msgid "<b>Length:</b>"
-msgstr ""
+msgstr "<b>Duración:</b>"
+
