--- a/TODO
+++ b/TODO
@@ -7,3 +7,5 @@ TODO for thunar-tag-renamer-plugin
 
   * Check if we can rename files to folders, like
     ARTIST/ALBUM/TITLE.EXT
+
+  * Testing the first goodies git-svn module
