--- a/po/eu.po
+++ b/po/eu.po
@@ -8,16 +8,19 @@ msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2006-04-10 11:25+0100\n"
+"PO-Revision-Date: 2008-11-05 14:22+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Basque <xfce-i18n@xfce.org>\n"
+"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.2.0\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
 msgid "Title"
-msgstr "IZenburua"
+msgstr "Izenburua"
 
 #: ../thunar-plugin/tag-renamer.c:60
 msgid "Artist - Title"
@@ -50,7 +53,7 @@ msgstr "_Formatua:"
 
 #: ../thunar-plugin/tag-renamer.c:246
 msgid "_Underscores"
-msgstr "_AZpimarratual"
+msgstr "_Azpimarratua"
 
 #: ../thunar-plugin/tag-renamer.c:248
 msgid ""
