--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-09  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po; LINGUAS: Spanish translation added (Abel Martín)
+	* sq.po: Albanian translation update (Besnik Bleta)
+
 2008-10-14 Lars Nielsen <lars@mit-web.dk>
 
 	* da.po,LINGUAS: Danish translation updated
