--- a/po/es.po
+++ b/po/es.po
@@ -1,171 +1,171 @@
-# Albanian translation of the thunar-media-tags-plugin.
+# Spanish translation of the thunar-media-tags-plugin.
 # Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
 # This file is distributed under the same license as the thunar-media-tags-plugin package.
-# Besnik Bleta <besnik@programeshqip.org>, 2007.
+# Abel Martín <abel.martin.ruiz@gmail.com>, 2008.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
+"Project-Id-Version: thunar-media-tags-plugin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2008-11-04 22:32+0200\n"
-"Last-Translator: Besnik Bleta <besnik@programeshqip.org>\n"
-"Language-Team: Albanian <xfce-i18n@xfce.org>\n"
+"PO-Revision-Date: 2008-10-20 20:27+0100\n"
+"Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
+"Language-Team: Spanish <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
 msgid "Title"
-msgstr "Titull"
+msgstr "Título"
 
 #: ../thunar-plugin/tag-renamer.c:60
 msgid "Artist - Title"
-msgstr "Artist - Titull"
+msgstr "Artista - Título"
 
 #: ../thunar-plugin/tag-renamer.c:61
 msgid "Track - Title"
-msgstr "Pjesë - Titull"
+msgstr "Pista - Título"
 
 #: ../thunar-plugin/tag-renamer.c:62
 msgid "Track - Artist - Title"
-msgstr "Pjesë - Artist - Titull"
+msgstr "Pista - Artista - Título"
 
 #: ../thunar-plugin/tag-renamer.c:63
 msgid "Track. Title"
-msgstr "Pjesë. Titull"
+msgstr "Pista. Título"
 
 #: ../thunar-plugin/tag-renamer.c:64
 msgid "Track. Artist - Title"
-msgstr "Pjesë. Artist - Titull"
+msgstr "Pista. Artista - Título"
 
 #: ../thunar-plugin/tag-renamer.c:65
 msgid "Artist - Track - Title"
-msgstr "Artist - Pjesë - Titull"
+msgstr "Artista - Pista - Título"
 
 #. Format label
 #: ../thunar-plugin/tag-renamer.c:223
 msgid "_Format:"
-msgstr "_Format:"
+msgstr "_Formato:"
 
 #: ../thunar-plugin/tag-renamer.c:246
 msgid "_Underscores"
-msgstr "_Nënvija"
+msgstr "_Subrayados"
 
 #: ../thunar-plugin/tag-renamer.c:248
 msgid "Activating this option will replace all spaces in the target filename with underscores."
-msgstr "Aktivizimi i kësaj mundësie do të zëvendësojë me nënvija tërë hapësirat në emrin e kartelës objektiv."
+msgstr "Activar esta opción sustituirá todos los espacios en el nombre del archivo objetivo con subrayados."
 
 #: ../thunar-plugin/tag-renamer.c:253
 msgid "_Lowercase"
-msgstr "Me të _vogla"
+msgstr "_Minúsculas"
 
 #: ../thunar-plugin/tag-renamer.c:255
 msgid "If you activate this, the resulting filename will only contain lowercase letters."
-msgstr "Nëse aktivizoni këtë, emri i kartelës që rrjedh do të përmbajë vetëm gërma të vogla."
+msgstr "Si activa esta opción, el nombre de archivo resultante sólo contendrá letras minúsculas."
 
 #: ../thunar-plugin/tag-renamer.c:264
 #: ../thunar-plugin/tag-renamer.c:702
 #: ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
-msgstr "Artist i Panjohur "
+msgstr "Artista desconocido"
 
 #: ../thunar-plugin/tag-renamer.c:265
 #: ../thunar-plugin/tag-renamer.c:750
 #: ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
-msgstr "Titull i Panjohur"
+msgstr "Título desconocido"
 
 #. Edit tags action
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit _Tags"
-msgstr "Përpunoni _Shenja"
+msgstr "Editar _etiquetas"
 
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit ID3/OGG tags of this file."
-msgstr "Përpunoni shenja ID3/OGG të kësaj kartele."
+msgstr "Editar etiquetas ID3/OGG de este archivo."
 
 #: ../thunar-plugin/tag-renamer.c:545
 msgid "Audio Tags"
-msgstr "Shenja Audio"
+msgstr "Etiquetas de audio"
 
 #: ../thunar-plugin/audio-tags-page.c:196
 msgid "Unknown Album"
-msgstr "Album i Panjohur "
+msgstr "Álbum desconocido"
 
 #: ../thunar-plugin/audio-tags-page.c:305
 msgid "<b>Track:</b>"
-msgstr "<b>Pjesë:</b>"
+msgstr "<b>Pista:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:320
 msgid "Enter the track number here."
-msgstr "Jepni këtu numrin e gjurmës."
+msgstr "Introduzca aquí el número de pista."
 
 #: ../thunar-plugin/audio-tags-page.c:328
 msgid "<b>Year:</b>"
-msgstr "<b>Vit:</b>"
+msgstr "<b>Año:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:343
 msgid "Enter the release year here."
-msgstr "Jepni këtu vitin e botimit."
+msgstr "Introduzca aquí el año de publicación."
 
 #: ../thunar-plugin/audio-tags-page.c:351
 msgid "<b>Artist:</b>"
-msgstr "<b>Artist:</b>"
+msgstr "<b>Artista:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:358
 msgid "Enter the name of the artist or author of this file here."
-msgstr "Jepni këtu emrin e artistit ose autorit të kësaj kartele."
+msgstr "Introduzca aquí el nombre del artista o autor de este archivo."
 
 #: ../thunar-plugin/audio-tags-page.c:366
 msgid "<b>Title:</b>"
-msgstr "<b>Titull:</b>"
+msgstr "<b>Título:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:373
 msgid "Enter the song title here."
-msgstr "Jepni këtu titull kënge."
+msgstr "Introduzca aquí el título de la canción."
 
 #: ../thunar-plugin/audio-tags-page.c:380
 msgid "<b>Album:</b>"
-msgstr "<b>Album:</b>"
+msgstr "<b>Álbum:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:387
 msgid "Enter the album/record title here."
-msgstr "Jepni këtu titull albumi/regjistrimi."
+msgstr "Introduzca aquí el título del álbum/disco."
 
 #: ../thunar-plugin/audio-tags-page.c:394
 msgid "<b>Comment:</b>"
-msgstr "<b>Koment:</b>"
+msgstr "<b>Comentario:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:401
 msgid "Enter your comments here."
-msgstr "Jepni këtu komentet tuaja."
+msgstr "Introduzca aquí sus comentarios."
 
 #: ../thunar-plugin/audio-tags-page.c:408
 msgid "<b>Genre:</b>"
-msgstr "<b>Lloj:</b>"
+msgstr "<b>Género:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:415
 msgid "Select or enter the genre of this song here."
-msgstr "Përzgjidhni ose jepni këtu llojin e kësaj kënge."
+msgstr "Selecciones el género de esta canción aquí."
 
 #. Create and add the save action
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "_Save"
-msgstr "_Ruaj"
+msgstr "_Guardar"
 
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "Save audio tags."
-msgstr "Ruaj shenja audioje."
+msgstr "Guardar etiquetas de audio."
 
 #. Create and add the info action
 #: ../thunar-plugin/audio-tags-page.c:461
 msgid "_Information"
-msgstr "Të _dhëna"
+msgstr "_Información"
 
 #: ../thunar-plugin/audio-tags-page.c:461
 msgid "Display more detailed information about this audio file."
-msgstr "Shfaq më tepër të dhëna të hollësishme rreth kësaj kartele audio."
+msgstr "Mostrar información más detallada sobre este archivo de audio."
 
 #: ../thunar-plugin/audio-tags-page.c:528
 msgid "Audio"
@@ -174,17 +174,17 @@ msgstr "Audio"
 #. Set up the dialog
 #: ../thunar-plugin/audio-tags-page.c:564
 msgid "Edit Tags"
-msgstr "Përpunoni Shenja"
+msgstr "Editar etiquetas"
 
 #. Create dialog
 #: ../thunar-plugin/audio-tags-page.c:992
 msgid "Audio Information"
-msgstr "Të dhëna Audio"
+msgstr "Información de audio"
 
 #: ../thunar-plugin/audio-tags-page.c:1003
 #, c-format
 msgid "%d:%d Minutes"
-msgstr "%d:%d Minuta"
+msgstr "%d:%d minutos"
 
 #: ../thunar-plugin/audio-tags-page.c:1004
 #, c-format
@@ -198,29 +198,29 @@ msgstr "%d Hz"
 
 #: ../thunar-plugin/audio-tags-page.c:1025
 msgid "<b>Filename:</b>"
-msgstr "<b>Emër kartele:</b>"
+msgstr "<b>Nombre de archivo:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1038
 msgid "<b>Filesize:</b>"
-msgstr "<b>Madhësi kartele:</b>"
+msgstr "<b>Tamaño de archivo:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
-msgstr "<b>Tip MIME:</b>"
+msgstr "<b>Tipo MIME:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1064
 msgid "<b>Bitrate:</b>"
-msgstr ""
+msgstr "<b>Tasa de bits:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1077
 msgid "<b>Samplerate:</b>"
-msgstr ""
+msgstr "<b>Tasa de muestreo:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1090
 msgid "<b>Channels:</b>"
-msgstr "<b>Kanale:</b>"
+msgstr "<b>Canales:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1103
 msgid "<b>Length:</b>"
-msgstr "<b>Gjatësi:</b>"
+msgstr "<b>Duración:</b>"
 
