--- a/po/ja.po
+++ b/po/ja.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2006-03-26 13:39+0900\n"
-"Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
+"PO-Revision-Date: 2008-12-04 00:36+0900\n"
+"Last-Translator: Masato Hashimoto <cabezon.hashimoto@gmail.com>\n"
 "Language-Team: Japanese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -54,30 +54,25 @@ msgid "_Underscores"
 msgstr "アンダースコア(_U)"
 
 #: ../thunar-plugin/tag-renamer.c:248
-msgid ""
-"Activating this option will replace all spaces in the target filename with "
-"underscores."
-msgstr ""
-"このオプションを有効にすると、ファイル名の全てのスペースをアンダースコアで置"
-"き換えます。"
+msgid "Activating this option will replace all spaces in the target filename with underscores."
+msgstr "このオプションを有効にすると、ファイル名の全てのスペースをアンダースコアで置き換えます。"
 
 #: ../thunar-plugin/tag-renamer.c:253
 msgid "_Lowercase"
 msgstr "小文字(_L)"
 
 #: ../thunar-plugin/tag-renamer.c:255
-msgid ""
-"If you activate this, the resulting filename will only contain lowercase "
-"letters."
-msgstr ""
-"このオプションを有効にすると、ファイル名の大文字を小文字で置き換えます。"
+msgid "If you activate this, the resulting filename will only contain lowercase letters."
+msgstr "このオプションを有効にすると、ファイル名の大文字を小文字へ置き換えます。"
 
-#: ../thunar-plugin/tag-renamer.c:264 ../thunar-plugin/tag-renamer.c:702
+#: ../thunar-plugin/tag-renamer.c:264
+#: ../thunar-plugin/tag-renamer.c:702
 #: ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
 msgstr "アーティスト不明"
 
-#: ../thunar-plugin/tag-renamer.c:265 ../thunar-plugin/tag-renamer.c:750
+#: ../thunar-plugin/tag-renamer.c:265
+#: ../thunar-plugin/tag-renamer.c:750
 #: ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
 msgstr "タイトル不明"
@@ -195,7 +190,7 @@ msgstr "%d:%d 分"
 #: ../thunar-plugin/audio-tags-page.c:1004
 #, c-format
 msgid "%d KBit/s"
-msgstr "%d KBit/秒"
+msgstr "%d Kbit/秒"
 
 #: ../thunar-plugin/audio-tags-page.c:1005
 #, c-format
@@ -212,15 +207,15 @@ msgstr "<b>ファイルサイズ:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
-msgstr "<b>MIMEタイプ:</b>"
+msgstr "<b>MIME タイプ:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1064
 msgid "<b>Bitrate:</b>"
-msgstr "<b>ビット速度:</b>"
+msgstr "<b>ビットレート:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1077
 msgid "<b>Samplerate:</b>"
-msgstr "<b>サンプル速度:</b>"
+msgstr "<b>サンプルレート:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1090
 msgid "<b>Channels:</b>"
@@ -228,4 +223,5 @@ msgstr "<b>チャンネル数:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1103
 msgid "<b>Length:</b>"
-msgstr "<b>長さ:</b>"
+msgstr "<b>演奏時間:</b>"
+
