--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-20  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ca.po: Catalan translation udpate (Carles Muñoz Gorriz)
+	* gl.po: Galician translation update (Leandro Regueiro)
+
 2009-02-20  Eren Türkay <erenturkay@xfce.org>
 
     * tr.po: Add Turkish translation by Samed Beyribey
