--- a/po/ca.po
+++ b/po/ca.po
@@ -1,14 +1,14 @@
 # Catalan translation of the thunar-media-tags-plugin.
 # Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
 # This file is distributed under the same license as the thunar-media-tags-plugin package.
-# Carles Muñoz Gorriz <carlesmu@internautas.org>, 2006, 2008.
+# Carles Muñoz Gorriz <carlesmu@internautas.org>, 2006, 2008-2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2008-03-21 20:29+0100\n"
+"PO-Revision-Date: 2009-02-01 12:07+0100\n"
 "Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
 "Language-Team: catalan <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -207,7 +207,7 @@ msgstr "<b>Nom del fitxer:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1038
 msgid "<b>Filesize:</b>"
-msgstr "<b>Tamany:</b>"
+msgstr "<b>Mida del fitxer:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
