--- a/po/pl.po
+++ b/po/pl.po
@@ -8,11 +8,11 @@ msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2006-04-08 12:16+0900\n"
-"Last-Translator: Piotr Maliński <admin@rk.edu.pl>\n"
+"PO-Revision-Date: 2009-03-25 09:19+0100\n"
+"Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../thunar-plugin/tag-renamer.c:59
@@ -21,27 +21,27 @@ msgstr "Tytuł"
 
 #: ../thunar-plugin/tag-renamer.c:60
 msgid "Artist - Title"
-msgstr "Artysta - Tytuł"
+msgstr "Artysta - tytuł"
 
 #: ../thunar-plugin/tag-renamer.c:61
 msgid "Track - Title"
-msgstr "Ścieżka - Tytuł"
+msgstr "Ścieżka - tytuł"
 
 #: ../thunar-plugin/tag-renamer.c:62
 msgid "Track - Artist - Title"
-msgstr "Ścieżka - Artysta - Tytuł"
+msgstr "Ścieżka - artysta - tytuł"
 
 #: ../thunar-plugin/tag-renamer.c:63
 msgid "Track. Title"
-msgstr "Ścieżka. Tytuł"
+msgstr "Ścieżka. tytuł"
 
 #: ../thunar-plugin/tag-renamer.c:64
 msgid "Track. Artist - Title"
-msgstr "Ścieżka. Artysta - Tytuł"
+msgstr "Ścieżka. artysta - tytuł"
 
 #: ../thunar-plugin/tag-renamer.c:65
 msgid "Artist - Track - Title"
-msgstr "Artysta - Ścieżka - Tytuł"
+msgstr "Artysta - ścieżka - tytuł"
 
 #. Format label
 #: ../thunar-plugin/tag-renamer.c:223
@@ -53,27 +53,25 @@ msgid "_Underscores"
 msgstr "_Podkreślenia"
 
 #: ../thunar-plugin/tag-renamer.c:248
-msgid ""
-"Activating this option will replace all spaces in the target filename with "
-"underscores."
-msgstr "Włączenie opcji zastąpi spacje znakami _."
+msgid "Activating this option will replace all spaces in the target filename with underscores."
+msgstr "Zastępuje znaki spacji w nazwie pliku docelowego, znakami podkreślenia"
 
 #: ../thunar-plugin/tag-renamer.c:253
 msgid "_Lowercase"
 msgstr "_Małe litery"
 
 #: ../thunar-plugin/tag-renamer.c:255
-msgid ""
-"If you activate this, the resulting filename will only contain lowercase "
-"letters."
-msgstr "Włączenie opcji zmieni wszystkie duże litery na małe."
+msgid "If you activate this, the resulting filename will only contain lowercase letters."
+msgstr "Używa tyko małych liter w nazwie pliku docelowego"
 
-#: ../thunar-plugin/tag-renamer.c:264 ../thunar-plugin/tag-renamer.c:702
+#: ../thunar-plugin/tag-renamer.c:264
+#: ../thunar-plugin/tag-renamer.c:702
 #: ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
 msgstr "Nieznany artysta"
 
-#: ../thunar-plugin/tag-renamer.c:265 ../thunar-plugin/tag-renamer.c:750
+#: ../thunar-plugin/tag-renamer.c:265
+#: ../thunar-plugin/tag-renamer.c:750
 #: ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
 msgstr "Nieznany tytuł"
@@ -81,19 +79,19 @@ msgstr "Nieznany tytuł"
 #. Edit tags action
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit _Tags"
-msgstr "Edytuj _Tagi"
+msgstr "Edytuj _etykiety"
 
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit ID3/OGG tags of this file."
-msgstr "Edytuj tagi ID3/OGG  dla tego pliku."
+msgstr "Modyfikuje etykiety ID3/OGG pliku muzycznego"
 
 #: ../thunar-plugin/tag-renamer.c:545
 msgid "Audio Tags"
-msgstr "Tagi Audio"
+msgstr "Wstawianie etykiet audio"
 
 #: ../thunar-plugin/audio-tags-page.c:196
 msgid "Unknown Album"
-msgstr "Nieznany Album"
+msgstr "Nieznany album"
 
 #: ../thunar-plugin/audio-tags-page.c:305
 msgid "<b>Track:</b>"
@@ -101,7 +99,7 @@ msgstr "<b>Ścieżka:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:320
 msgid "Enter the track number here."
-msgstr "Podaj numer ścieżki."
+msgstr "Wprowadza numer ścieżki"
 
 #: ../thunar-plugin/audio-tags-page.c:328
 msgid "<b>Year:</b>"
@@ -109,7 +107,7 @@ msgstr "<b>Rok:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:343
 msgid "Enter the release year here."
-msgstr "Podaj rok publikacji."
+msgstr "Wprowadza rok publikacji"
 
 #: ../thunar-plugin/audio-tags-page.c:351
 msgid "<b>Artist:</b>"
@@ -117,7 +115,7 @@ msgstr "<b>Artysta:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:358
 msgid "Enter the name of the artist or author of this file here."
-msgstr "Podaj nazwisko autora lub artysty."
+msgstr "Wprowadza nazwisko autora lub artysty"
 
 #: ../thunar-plugin/audio-tags-page.c:366
 msgid "<b>Title:</b>"
@@ -125,7 +123,7 @@ msgstr "<b>Tytuł:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:373
 msgid "Enter the song title here."
-msgstr "Podaj tytuł utworu."
+msgstr "Wprowadza tytuł utworu"
 
 #: ../thunar-plugin/audio-tags-page.c:380
 msgid "<b>Album:</b>"
@@ -133,7 +131,7 @@ msgstr "<b>Album:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:387
 msgid "Enter the album/record title here."
-msgstr "Podaj nazwę albumu/nagrania."
+msgstr "Wprowadza nazwę albumu lub nagrania"
 
 #: ../thunar-plugin/audio-tags-page.c:394
 msgid "<b>Comment:</b>"
@@ -141,15 +139,15 @@ msgstr "<b>Komentarz:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:401
 msgid "Enter your comments here."
-msgstr "Podaj swoje komentarze."
+msgstr "Wprowadza własne komentarze"
 
 #: ../thunar-plugin/audio-tags-page.c:408
 msgid "<b>Genre:</b>"
-msgstr "<b>Typ:</b>"
+msgstr "<b>Gatunek:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:415
 msgid "Select or enter the genre of this song here."
-msgstr "Wybierz lub podaj typ tego utworu tutaj."
+msgstr "Wprowadza gatunek utwory"
 
 #. Create and add the save action
 #: ../thunar-plugin/audio-tags-page.c:454
@@ -158,7 +156,7 @@ msgstr "_Zapisz"
 
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "Save audio tags."
-msgstr "Zapisz tagi audio"
+msgstr "Zapisuje etykiety audio"
 
 #. Create and add the info action
 #: ../thunar-plugin/audio-tags-page.c:461
@@ -167,26 +165,26 @@ msgstr "_Informacje"
 
 #: ../thunar-plugin/audio-tags-page.c:461
 msgid "Display more detailed information about this audio file."
-msgstr "Podaj więcej szczegółów o pliku audio"
+msgstr "Wyświetla bardziej szczegółowe informacje na temat pliku muzycznego"
 
 #: ../thunar-plugin/audio-tags-page.c:528
 msgid "Audio"
-msgstr "Audio"
+msgstr "Etykiety audio"
 
 #. Set up the dialog
 #: ../thunar-plugin/audio-tags-page.c:564
 msgid "Edit Tags"
-msgstr "Edytuj Tagi"
+msgstr "Edytuj etykiety"
 
 #. Create dialog
 #: ../thunar-plugin/audio-tags-page.c:992
 msgid "Audio Information"
-msgstr "Informacje Audio"
+msgstr "Informacje audio"
 
 #: ../thunar-plugin/audio-tags-page.c:1003
 #, c-format
 msgid "%d:%d Minutes"
-msgstr "%d:%d Minut"
+msgstr "%d:%d min"
 
 #: ../thunar-plugin/audio-tags-page.c:1004
 #, c-format
@@ -200,28 +198,29 @@ msgstr "%d Hz"
 
 #: ../thunar-plugin/audio-tags-page.c:1025
 msgid "<b>Filename:</b>"
-msgstr "<b>Nazwa Pliku:</b>"
+msgstr "<b>Nazwa pliku:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1038
 msgid "<b>Filesize:</b>"
-msgstr "<b>Rozmiar Pliku:</b>"
+msgstr "<b>Rozmiar pliku:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
-msgstr "<b>Typ Mime:</b>"
+msgstr "<b>Typ MIME:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1064
 msgid "<b>Bitrate:</b>"
-msgstr "<b>Bitrate:</b>"
+msgstr "<b>Gęstość bitowa:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1077
 msgid "<b>Samplerate:</b>"
-msgstr "<b>Samplerate:</b>"
+msgstr "<b>Częstotliwość próbkowania:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1090
 msgid "<b>Channels:</b>"
-msgstr "<b>Kanały:</b>"
+msgstr "<b>Ilość kanałów:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1103
 msgid "<b>Length:</b>"
-msgstr "<b>Długość:</b>"
+msgstr "<b>Czas trwania:</b>"
+
