--- a/po/hu.po
+++ b/po/hu.po
@@ -1,95 +1,133 @@
-# Hungarian translation of the thunar-media-tags-plugin.
-# Copyright (C) 2006-2007 Jannis Pohlmann <jannis@xfce.org>
+# Hungarian translation of thunar-media-tags-plugin 
+# Copyright 2009. Free Software Foundation, Inc.
 # This file is distributed under the same license as the thunar-media-tags-plugin package.
-# SZERVÁC Attila <sas@321.hu>, 2006-2007.
 #
+# SZERVÁC Attila <sas@321.hu>, 2006-2007.
+# Gabor Kelemen <kelemeng at gnome dot hu>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: thunar-media-tags-plugin 0.1.2svn\n"
+"Project-Id-Version: thunar-media-tags-plugin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-09-11 11:38+0200\n"
-"PO-Revision-Date: 2007-05-06 09:32+0100\n"
-"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
-"Language-Team: Hungarian <xfce-i18n@xfce.org>\n"
+"POT-Creation-Date: 2009-07-22 22:45+0200\n"
+"PO-Revision-Date: 2009-07-23 00:45+0200\n"
+"Last-Translator: Gabor Kelemen <kelemeng at gnome dot hu>\n"
+"Language-Team: Hungarian <gnome at gnome dot hu>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Hungarian\n"
-"X-Poedit-Country: HUNGARY\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: ../thunar-plugin/tag-renamer.c:59
+#: ../thunar-plugin/tag-renamer.c:59 ../thunar-plugin/tag-renamer.c:673
 msgid "Title"
 msgstr "Cím"
 
 #: ../thunar-plugin/tag-renamer.c:60
 msgid "Artist - Title"
-msgstr "Művész - Cím"
+msgstr "Előadó – Cím"
 
 #: ../thunar-plugin/tag-renamer.c:61
 msgid "Track - Title"
-msgstr "Sorszám - Cím"
+msgstr "Szám – Cím"
 
 #: ../thunar-plugin/tag-renamer.c:62
 msgid "Track - Artist - Title"
-msgstr "Sorszám - Művész - Cím"
+msgstr "Szám – Előadó – Cím"
 
 #: ../thunar-plugin/tag-renamer.c:63
 msgid "Track. Title"
-msgstr "Sorszám. Cím"
+msgstr "Szám. Cím"
 
 #: ../thunar-plugin/tag-renamer.c:64
 msgid "Track. Artist - Title"
-msgstr "Sorszám. Művész - Cím"
+msgstr "Szám. Előadó – Cím"
 
 #: ../thunar-plugin/tag-renamer.c:65
 msgid "Artist - Track - Title"
-msgstr "Művész - Sorszám - Cím"
+msgstr "Előadó – Szám – Cím"
+
+#: ../thunar-plugin/tag-renamer.c:67
+msgid "Custom"
+msgstr "Egyéni"
+
+#. Custom format
+#: ../thunar-plugin/tag-renamer.c:252
+msgid "Cust_om format:"
+msgstr "_Egyéni formátum:"
 
 #. Format label
-#: ../thunar-plugin/tag-renamer.c:223
+#: ../thunar-plugin/tag-renamer.c:280
 msgid "_Format:"
 msgstr "_Formátum:"
 
-#: ../thunar-plugin/tag-renamer.c:246
+#: ../thunar-plugin/tag-renamer.c:321
 msgid "_Underscores"
 msgstr "_Aláhúzások"
 
-#: ../thunar-plugin/tag-renamer.c:248
-msgid "Activating this option will replace all spaces in the target filename with underscores."
-msgstr "E lehetőség a célfájl nevében aláhúzásra cseréli a szóközöket."
+#: ../thunar-plugin/tag-renamer.c:323
+msgid ""
+"Activating this option will replace all spaces in the target filename with "
+"underscores."
+msgstr "Minden szóköz cseréje a cél fájlnévben aláhúzásokra."
 
-#: ../thunar-plugin/tag-renamer.c:253
+#: ../thunar-plugin/tag-renamer.c:328
 msgid "_Lowercase"
-msgstr "_kisbetű"
+msgstr "_Kisbetűk"
 
-#: ../thunar-plugin/tag-renamer.c:255
-msgid "If you activate this, the resulting filename will only contain lowercase letters."
-msgstr "Használata esetén a fájl nevében nem lesz Nagybetű."
+#: ../thunar-plugin/tag-renamer.c:330
+msgid ""
+"If you activate this, the resulting filename will only contain lowercase "
+"letters."
+msgstr "Az eredményül kapott fájlnév csak kisbetűket fog tartalmazni."
 
-#: ../thunar-plugin/tag-renamer.c:264
-#: ../thunar-plugin/tag-renamer.c:702
-#: ../thunar-plugin/audio-tags-page.c:183
+#: ../thunar-plugin/tag-renamer.c:480 ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
-msgstr "Ismeretlen művész"
+msgstr "Ismeretlen előadó"
 
-#: ../thunar-plugin/tag-renamer.c:265
-#: ../thunar-plugin/tag-renamer.c:750
-#: ../thunar-plugin/audio-tags-page.c:209
+#: ../thunar-plugin/tag-renamer.c:488 ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
 msgstr "Ismeretlen cím"
 
 #. Edit tags action
-#: ../thunar-plugin/tag-renamer.c:523
+#: ../thunar-plugin/tag-renamer.c:643
 msgid "Edit _Tags"
-msgstr "_Tag-ok szerkesztése"
+msgstr "_Címkék szerkesztése"
 
-#: ../thunar-plugin/tag-renamer.c:523
+#: ../thunar-plugin/tag-renamer.c:643
 msgid "Edit ID3/OGG tags of this file."
-msgstr "OGG/id3 tagok szerkesztése"
+msgstr "Ezen fájl ID3/OGG címkéjének szerkesztése."
 
-#: ../thunar-plugin/tag-renamer.c:545
+#: ../thunar-plugin/tag-renamer.c:662
+msgid "Tag Help"
+msgstr "Címkesúgó"
+
+#: ../thunar-plugin/tag-renamer.c:673
+msgid "Artist"
+msgstr "Előadó"
+
+#: ../thunar-plugin/tag-renamer.c:674
+msgid "Album"
+msgstr "Album"
+
+#: ../thunar-plugin/tag-renamer.c:674
+msgid "Genre"
+msgstr "Műfaj"
+
+#: ../thunar-plugin/tag-renamer.c:675
+msgid "Track number"
+msgstr "Szám sorszáma"
+
+#: ../thunar-plugin/tag-renamer.c:675
+msgid "Year"
+msgstr "Év"
+
+#: ../thunar-plugin/tag-renamer.c:676
+msgid "Comment"
+msgstr "Megjegyzés"
+
+#: ../thunar-plugin/tag-renamer.c:733
 msgid "Audio Tags"
-msgstr "Hang tag-ok"
+msgstr "Hangcímkék"
 
 #: ../thunar-plugin/audio-tags-page.c:196
 msgid "Unknown Album"
@@ -97,11 +135,11 @@ msgstr "Ismeretlen album"
 
 #: ../thunar-plugin/audio-tags-page.c:305
 msgid "<b>Track:</b>"
-msgstr "<b>Track:</b>"
+msgstr "<b>Szám:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:320
 msgid "Enter the track number here."
-msgstr "Írd ide a track sorszámát"
+msgstr "Adja meg a szám sorszámát."
 
 #: ../thunar-plugin/audio-tags-page.c:328
 msgid "<b>Year:</b>"
@@ -109,15 +147,15 @@ msgstr "<b>Év:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:343
 msgid "Enter the release year here."
-msgstr "Ide írd a kiadási évet"
+msgstr "Adja meg a kiadási évet."
 
 #: ../thunar-plugin/audio-tags-page.c:351
 msgid "<b>Artist:</b>"
-msgstr "<b>Művész:</b>"
+msgstr "<b>Előadó:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:358
 msgid "Enter the name of the artist or author of this file here."
-msgstr "Írd ide a mű szerzőjének vagy a mű előadójának nevét"
+msgstr "Adja meg a fájl előadójának vagy szerzőjének nevét."
 
 #: ../thunar-plugin/audio-tags-page.c:366
 msgid "<b>Title:</b>"
@@ -125,7 +163,7 @@ msgstr "<b>Cím:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:373
 msgid "Enter the song title here."
-msgstr "Írd ide a dal címét"
+msgstr "Adja meg a szám címét."
 
 #: ../thunar-plugin/audio-tags-page.c:380
 msgid "<b>Album:</b>"
@@ -133,7 +171,7 @@ msgstr "<b>Album:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:387
 msgid "Enter the album/record title here."
-msgstr "Írd ide az album/felvétel címét"
+msgstr "Adja meg az album/felvétel címét."
 
 #: ../thunar-plugin/audio-tags-page.c:394
 msgid "<b>Comment:</b>"
@@ -141,7 +179,7 @@ msgstr "<b>Megjegyzés:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:401
 msgid "Enter your comments here."
-msgstr "Írd ide megjegyzéseidet"
+msgstr "Adja meg megjegyzéseit."
 
 #: ../thunar-plugin/audio-tags-page.c:408
 msgid "<b>Genre:</b>"
@@ -149,25 +187,25 @@ msgstr "<b>Műfaj:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:415
 msgid "Select or enter the genre of this song here."
-msgstr "Válaszd ki vagy írd be e dal műfaját,"
+msgstr "Adja meg vagy válassza ki a szám műfaját."
 
 #. Create and add the save action
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "_Save"
-msgstr "_Mentés"
+msgstr "M_entés"
 
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "Save audio tags."
-msgstr "Hang tag-ok mentése"
+msgstr "Hangcímkék mentése."
 
 #. Create and add the info action
 #: ../thunar-plugin/audio-tags-page.c:461
 msgid "_Information"
-msgstr "_Információ"
+msgstr "_Információk"
 
 #: ../thunar-plugin/audio-tags-page.c:461
 msgid "Display more detailed information about this audio file."
-msgstr "Részletesebb információk e hangfájlról."
+msgstr "Részletesebb információk megjelenítése erről a hangfájlról."
 
 #: ../thunar-plugin/audio-tags-page.c:528
 msgid "Audio"
@@ -176,12 +214,12 @@ msgstr "Hang"
 #. Set up the dialog
 #: ../thunar-plugin/audio-tags-page.c:564
 msgid "Edit Tags"
-msgstr "Tagok szerkesztése"
+msgstr "Címkék szerkesztése"
 
 #. Create dialog
 #: ../thunar-plugin/audio-tags-page.c:992
 msgid "Audio Information"
-msgstr "Hang információ"
+msgstr "Hanginformációk"
 
 #: ../thunar-plugin/audio-tags-page.c:1003
 #, c-format
@@ -191,7 +229,7 @@ msgstr "%d:%d perc"
 #: ../thunar-plugin/audio-tags-page.c:1004
 #, c-format
 msgid "%d KBit/s"
-msgstr "%d KBit/s"
+msgstr "%d KBit/mp"
 
 #: ../thunar-plugin/audio-tags-page.c:1005
 #, c-format
@@ -208,15 +246,15 @@ msgstr "<b>Fájlméret:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
-msgstr "<b>MIME Típus:</b>"
+msgstr "<b>MIME-típus:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1064
 msgid "<b>Bitrate:</b>"
-msgstr "<b>Bitráta:</b>"
+msgstr "<b>Bitsebesség:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1077
 msgid "<b>Samplerate:</b>"
-msgstr "<b>Mintavétel:</b>"
+msgstr "<b>Mintavételezési gyakoriság:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1090
 msgid "<b>Channels:</b>"
