--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.5.0 (2024-12-30)
+=====
+- I18n: Update po/LINGUAS list
+- build: Add ACLOCAL_FLAGS to ACLOCAL_AMFLAGS
+- Fix AtkRelationSet leaks
+- build: Use XDT_VERSION_INIT and get rid of configure.ac.in
+- build: Add missing check for bind_textdomain_codeset
+- I18n: Update po/LINGUAS list
+- build: Get rid of intltool
+- Translation Updates:
+  Amharic, Asturian, Greek, Hindi, Italian, Polish, Romanian, Turkish
+
 0.4.0 (2023-02-06)
 =====
 - build: Add GLib requirement
